--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -8,7 +8,7 @@
     <extensions defaultExtensionNs="com.intellij">
         <applicationService serviceImplementation="com.trustt.SettingsState"/>
     </extensions>
-
+    <description>Generate JUnit test cases for spring boot web service</description>
     <actions>
         <action id="GenerateJavaTests"
                 class="com.trustt.GenerateTestsAction"
